[package]
name = "peace-performance"
version = "0.1.2"
authors = ["MaxOhn <ohn.m@hotmail.de>", "Pure-Peace <940857703@qq.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Pure-Peace/peace-performance"
description = "osu! pp & stars calculation. Peace edition"
keywords = ["osu", "pp", "stars", "async", "async-std"]

[features]
default = ["osu", "taiko", "fruits", "mania", "no_leniency", "async_std"]

osu = []
taiko = []
fruits = []
mania = []

all_included = []
no_leniency = []
no_sliders_no_leniency = []
async_std = ["async-std"]

[dependencies]
async-std = { version = "1.9.0", optional = true }
