[package]
name = "peace-performance"
version = "0.2.2"
authors = ["MaxOhn <ohn.m@hotmail.de>", "Pure-Peace <940857703@qq.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Pure-Peace/peace-performance"
description = "osu! pp & stars calculation. Peace edition"
keywords = ["osu", "pp", "stars", "async", "async-std"]

[features]
default = ["osu", "taiko", "fruits", "mania", "all_included", "async_std", "peace_edition"]

peace_edition = []

# game modes
osu = []
taiko = []
fruits = []
mania = []

# osu!standard version
all_included = []
no_leniency = []
no_sliders_no_leniency = []

# async version
async_std = ["async-std"]
async_tokio = ["tokio"]

[dependencies.async-std]
version = "1.9"
optional = true

[dependencies.tokio]
version = "1.2"
optional = true
default-features = false
features = ["io-util"]

[dev-dependencies.tokio]
version = "1.2"
features = ["fs", "rt-multi-thread"]
