[package]
name = "peace-performance"
version = "0.4.0"
authors = ["MaxOhn <ohn.m@hotmail.de>", "Pure-Peace <purepeace_@outlook.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Pure-Peace/peace-performance"
description = "osu! pp & stars calculation. Peace edition"
keywords = ["osu", "pp", "async", "async-std", "tokio"]

[features]
default = ["osu", "taiko", "fruits", "mania", "all_included", "async_tokio"]

score_v2_buff = []
ppysb_edition = []
relax_nerf = []

# game modes
osu = []
taiko = []
fruits = []
mania = []

# osu!standard version
all_included = []
no_leniency = []
no_sliders_no_leniency = []

# async version
async_std = ["async-std"]
async_tokio = ["tokio"]

[dependencies.async-std]
version = "1.9"
optional = true

[dependencies.tokio]
version = "1.9.0"
optional = true
default-features = false
features = ["io-util"]

[dev-dependencies.tokio]
version = "1.9.0"
features = ["fs", "rt"]
